--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
 #  command="# no build command"
 #  functions="netlify/functions"
   publish="public"
+
+[[headers]]
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
