--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,11 @@
   for = "/*"
     [headers.values]
     Access-Control-Allow-Origin = "*"
+
+[[redirects]]
+  from = "/trips"
+  to = "/.netlify/functions/trips"
+
+[[redirects]]
+  from = "/trip-details"
+  to = "/.netlify/functions/trip-details"  
